@@ -45,13 +45,6 @@ ccss_image_parse (ccss_image_t	 *self,
 void
 ccss_image_discard (ccss_image_t *self);
 
-#ifdef CCSS_DEBUG
-
-void
-ccss_image_dump (ccss_image_t const *self);
-
-#endif
-
 CCSS_END_DECLS
 
 #endif /* CCSS_IMAGE_H */
